gitops/manifests/jellyfin/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyfin-route
  namespace: media
spec:
  parentRefs:
    - name: homelab-gateway
      namespace: ingress-system
      sectionName: https-jellyfin
  hostnames:
    - jellyfin.ahaouari.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: jellyfin
          port: 80
